<resources>
    <string name="app_name">YAARA</string>
    <string name="app_subtitle">Aria2 Remote for Android</string>

    <!-- Hint -->
    <string name="new_task_hint">Add HTTP/FTP/Metalink</string>
    <string name="simple_new_task_title">New task</string>
    
    <string name="empty_list_place_holder">No Task</string>
    <string name="empty_server_placeholder">No Server</string>
    <string name="placeholder_tracker_list_hint">No Tracker</string>
    
    <!-- Activity titles -->
    <string name="activity_title_add_new_server">Add new server</string>
    <string name="activity_title_edit_server">Edit server</string>

    <!-- Verb -->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="advance">Advance</string>
    <string name="submit">Submit</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!-- Overview Fragment -->
    <string name="fragment_overview_file_path">Path:</string>
    <string name="fragment_overview_gid">GID:</string>
    <string name="fragment_overview_status">Status:</string>
    <string name="fragment_overview_remaining_time">Remaining time:</string>
    <string name="fragment_overview_connection">Connection:</string>
    <string name="fragment_overview_seeder">Seeder:</string>
    <string name="fragment_overview_error_code">Error code:</string>
    <string name="fragment_overview_completed_length">Completed length:</string>
    <string name="fragment_overview_pieces">Pieces:</string>
    <string name="fragment_overview_upload_length">Upload length:</string>
    <string name="fragment_overview_upload_speed">Upload speed:</string>
    <string name="fragment_overview_info_hash">Info hash:</string>
    <string name="fragment_overview_error_message">Error message:</string>
    <string name="fragment_overview_download_speed">Download speed:</string>
    <string name="fragment_overview_total_length">Total length:</string>

    <string name="label_yaara_service">Yaara Background Operation Service</string>

    <!-- Preference -->
    <string name="preference_category_aria2_settings_title">Aria2 Settings</string>
    <string name="preference_aria2_alias">Name</string>
    <string name="preference_aria2_host">Host</string>
    <string name="preference_aria2_port">Port</string>
    <string name="preference_aria2_request_path">Request Path</string>
    <string name="preference_aria2_protocol">Protocol</string>
    <string name="preference_aria2_request_method">Request Method</string>
    <string name="preference_aria2_secret_token">Secret Token</string>

    <string name="preference_category_yaara_settings_title">Yaara Settings</string>
    <string name="preference_yaara_update_interval">Update Interval</string>

    <string name="preference_list_protocol_http">HTTP</string>
    <string name="preference_list_protocol_http_val">@string/preference_list_protocol_http</string>
    <string name="preference_list_protocol_https">HTTPS</string>
    <string name="preference_list_protocol_https_val">@string/preference_list_protocol_https</string>
    <string name="preference_list_protocol_web_socket">WebSocket</string>
    <string name="preference_list_protocol_web_socket_val">@string/preference_list_protocol_web_socket</string>
    <string name="preference_list_protocol_web_socket_security">WebSocket (Security)</string>
    <string name="preference_list_protocol_web_socket_security_val">@string/preference_list_protocol_web_socket</string>

    <string name="preference_list_request_method_get">GET</string>
    <string name="preference_list_request_method_get_val">@string/preference_list_request_method_get</string>
    <string name="preference_list_request_method_post">POST</string>
    <string name="preference_list_request_method_post_val">@string/preference_list_request_method_post</string>

    <string name="preference_list_update_interval_1_second">1 Second</string>
    <string name="preference_list_update_interval_2_second">2 Seconds</string>
    <string name="preference_list_update_interval_5_second">5 Seconds</string>
    <string name="preference_list_update_interval_10_second">10 Seconds</string>

    <!-- Preference default value -->
    <string name="preference_aria2_request_path_default_val">jsonrpc</string>
    <string name="preference_aria2_port_default_val">6800</string>
    <string name="preference_aria2_protocol_default_val">@string/preference_list_protocol_http_val</string>
    <string name="preference_aria2_request_method_default_val">@string/preference_list_request_method_post_val</string>

    <string name="preference_not_set">Not set</string>

    <!-- Server Editor -->
    <string name="server_editor_title">Edit server</string>

    <!-- Drawer -->
    <string name="drawer_section_server">Server</string>
    <string name="drawer_item_title_new_server">New server</string>

</resources>
