<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/server_editor_title">

    <EditTextPreference
        android:inputType="textNoSuggestions"
        android:key="pref_aria2_alias"
        android:title="@string/preference_aria2_alias"
        android:persistent="false"/>

    <EditTextPreference
        android:inputType="textUri"
        android:key="pref_aria2_host"
        android:title="@string/preference_aria2_host"
        android:persistent="false"/>

    <com.mlieou.yaara.widget.NumberPickerPreference
        android:defaultValue="@string/preference_aria2_port_default_val"
        android:key="pref_aria2_port"
        android:title="@string/preference_aria2_port"
        android:persistent="false"/>

    <EditTextPreference
        android:defaultValue="@string/preference_aria2_request_path_default_val"
        android:inputType="textNoSuggestions"
        android:key="pref_aria2_request_path"
        android:title="@string/preference_aria2_request_path"
        android:enabled="false"
        android:persistent="false"/>

    <ListPreference
        android:defaultValue="@string/preference_aria2_protocol_default_val"
        android:enabled="false"
        android:entries="@array/preference_list_protocol_entries"
        android:entryValues="@array/preference_list_protocol_entry_values"
        android:key="pref_aria2_protocol"
        android:summary="%s"
        android:title="@string/preference_aria2_protocol"
        android:persistent="false"/>

    <ListPreference
        android:defaultValue="@string/preference_aria2_request_method_default_val"
        android:enabled="false"
        android:entries="@array/preference_list_request_method_entries"
        android:entryValues="@array/preference_list_request_method_entry_values"
        android:key="pref_aria2_request_method"
        android:summary="%s"
        android:title="@string/preference_aria2_request_method"
        android:persistent="false"/>

    <EditTextPreference
        android:inputType="textNoSuggestions"
        android:key="pref_aria2_secret_token"
        android:summary="@string/preference_not_set"
        android:title="@string/preference_aria2_secret_token"
        android:persistent="false"/>

</PreferenceScreen>